# IP-CSS

./: .editorconfig  .gitignore  .gitmessage.txt  .ktlint.yml  .prettierrc.json  BRANCH_CLEANUP_GUIDE.md  BUILD_NATIVE_LIBRARY.md  CHANGELOG.md  CLEANUP_SUMMARY.md  COMPILATION_REPORT.md  CONTRIBUTING.md  CRITICAL_BLOCKERS_REMEDIATION_PLAN.md  CURRENT_STATUS.md  DATA_LAYER_ANALYSIS_AND_PLAN.md  DATA_LAYER_IMPLEMENTATION_DETAILS.md  DATA_LAYER_IMPLEMENTATION_FINAL_SUMMARY.md  DATA_LAYER_IMPLEMENTATION_PROGRESS.md  DATA_LAYER_IMPLEMENTATION_SUMMARY.md  DATA_LAYER_REFACTORING_COMPLETE.md  DATA_LAYER_STATUS.md  DETAILED_DEVELOPMENT_PLAN.md  DEVELOPMENT_MAP.md  DEVELOPMENT_ROADMAP.md  DOCUMENTATION_ANALYSIS_TABLE.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_V2_SUMMARY.md  Dockerfile  EXTENSIONS_SETUP_REPORT.md  FINAL_SUMMARY.md  IMPLEMENTATION_TASKS.md  INSTALLATION_GUIDE.md  INSTALLATION_SUMMARY.md  INSTALL_INSTRUCTIONS.md  KOTLIN_VERSION_ANALYSIS.md  LICENSE  LOCAL_BUILD_REQUIREMENTS.md  NAS_PLATFORM_STATUS_TABLE.md  NATIVE_LIBRARIES_ANALYSIS.md  NATIVE_LIBRARIES_BUILD_COMPLETE.md  NATIVE_LIBRARIES_BUILD_INSTRUCTIONS.md  (+35 more)
.github/.github/: pull_request_template.md
.github/workflows/: build-native.yml  cd.yml  ci.yml
Inf-pipeline/: INFRASTRUCTURE_ANALYSIS.md  RASPBERRY_PI_JENKINS_ANALYSIS.md  README.md  SYNOLOGY_GIT_MIRROR_ANALYSIS.md
Inf-pipeline/Inf-pipeline/: SYNOLOGY_GIT_MIRROR_ANALYSIS.md
Log-server/: RASPBERRY_PI_4_ANALYSIS.md  README.md
OLD-DOC-2025-01-27/OLD-DOC-2025-01-27/: README.md
android/app/: build.gradle.kts
core/common/: README.md  build.gradle.kts
core/license/: build.gradle.kts
core/network/: CERTIFICATE_PINNING.md  IOS_CERTIFICATE_PINNING_COMPLETE.md  NETWORK_LAYER_100_PERCENT_COMPLETE.md  NETWORK_LAYER_IMPLEMENTATION_PROGRESS.md  PLATFORM_SPECIFIC_IMPLEMENTATION_COMPLETE.md  README.md  build.gradle.kts
docs/: ADMINISTRATOR_GUIDE.md  AI_ANALYTICS.md  ANALYSIS_ERRORS.md  ANALYSIS_SUMMARY_2025.md  API.md  API_EXAMPLES.md  ARCHITECTURE.md  BUILD_QUICK_REFERENCE.md  CONFIGURATION.md  DEPLOYMENT_GUIDE.md  DESKTOP_IMPLEMENTATION_PLAN.md  DEVELOPMENT.md  DEVELOPMENT_PLAN.md  DEVELOPMENT_TOOLS.md  DOCUMENTATION_CONSOLIDATION_REPORT.md  DOCUMENTATION_GAPS.md  DOCUMENTATION_MANAGEMENT.md  DOCUMENTATION_OPTIMIZATION_PROPOSALS.md  DOCUMENTATION_OPTIMIZATION_REPORT.md  DOCUMENTATION_REVISION_REPORT.md  DOCUMENTATION_UPDATE.md  DOCUMENTATION_VERSIONING.md  DOCUMENTATION_VERSIONING_QUICK_START.md  FFMPEG_INSTALLATION.md  FFMPEG_SETUP_REPORT.md  FUNCTIONALITY_ANALYSIS.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_STATUS.md  INTEGRATION_COMPLETE.md  INTEGRATION_GUIDE.md  LIBRARIES_INTEGRATION_SUMMARY.md  LICENSE_SYSTEM.md  MISSING_FUNCTIONALITY.md  NAS_BUILD_REQUIREMENTS_SUMMARY.md  NAS_LOCAL_BUILD_REQUIREMENTS.md  NAS_PLATFORMS_ANALYSIS.md  NATIVE_LIBRARIES_INTEGRATION.md  ONVIF_CLIENT.md  OPERATOR_GUIDE.md  OPTIMIZATION_COMPLETED.md  (+35 more)
docs/archive/: .gitkeep  2025-01-27
docs/docs/: ACTIVATE_NATIVE_DECODER.md  ANALYSIS_ERRORS.md  API.md  BUILD_ORGANIZATION.md  BUILD_TROUBLESHOOTING.md  CONFIGURATION.md  DEEP_ANALYSIS_2025.md  DEVELOPMENT.md  DEVELOPMENT_PLAN.md  DOCUMENTATION_ANALYSIS_REPORT.md  DOCUMENTATION_CONSOLIDATION_ANALYSIS.md  DOCUMENTATION_OPTIMIZATION_REPORT.md  DOCUMENTATION_VERSIONING.md  ENVIRONMENT_VARIABLES.md  FUNCTIONALITY_ANALYSIS.md  LICENSE_SYSTEM.md  LOCAL_BUILD.md  NAS_PLATFORMS_ANALYSIS.md  OPTIMIZATION_COMPLETED.md  OPTIMIZATION_PROGRESS.md  PERFORMANCE.md  PROJECT_STRUCTURE_MANAGEMENT.md  README.md  REQUIRED_LIBRARIES_SUMMARY.md  RTSP_CLIENT.md  RTSP_CLIENT_ACTIVATION_GUIDE.md  RTSP_CODE_ACTIVATION_TEMPLATE.md  RTSP_PLAYER_INTEGRATION_SUMMARY.md  RTSP_QUICK_START.md  TEST_DOCUMENTATION.md  (+11 more)
gradle/: libs.versions.toml
native/: CMakeLists.txt  build-stub-libs.ps1
native/analytics/: CMakeLists.txt
native/analytics/include/: anpr_engine.h  face_detector.h  motion_detector.h  object_detector.h  object_tracker.h
native/analytics/src/: anpr_engine.cpp  face_detector.cpp  motion_detector.cpp  object_detector.cpp  object_tracker.cpp
native/codecs/: CMakeLists.txt
native/codecs/include/: codec_manager.h  h264_codec.h  h265_codec.h  mjpeg_codec.h
native/codecs/src/: codec_manager.cpp  h264_codec.cpp  h265_codec.cpp  mjpeg_codec.cpp
native/native/analytics/: CMakeLists.txt
native/native/analytics/include/: face_detector.h  object_detector.h  object_tracker.h
native/native/analytics/src/: face_detector.cpp  motion_detector.cpp  object_detector.cpp
native/native/codecs/: CMakeLists.txt
native/native/codecs/include/: codec_manager.h  h264_codec.h  h265_codec.h
native/native/codecs/src/: h265_codec.cpp
native/native/video-processing/: BUILD.md  CMakeLists.txt
native/native/video-processing/include/: frame_processor.h  rtsp_client.h  video_decoder.h
native/native/video-processing/src/: frame_processor.cpp  rtsp_client.cpp  stream_manager.cpp  video_decoder.cpp
native/tests/: CMakeLists.txt  test_codecs.cpp
native/video-processing/: CMakeLists.txt  README.md
native/video-processing/include/: frame_processor.h  rtsp_client.h  stream_manager.h  video_decoder.h  video_encoder.h
native/video-processing/src/: frame_processor.cpp  rtsp_client.cpp  stream_manager.cpp  video_decoder.cpp  video_encoder.cpp
native/video-processing/src/jni/: rtsp_client_jni.cpp
scripts/: README.md  README_DOCUMENTATION_MANAGEMENT.md  activate-rtsp-client.sh  archive-documentation.ps1  archive-documentation.sh  build-all-native-libs.ps1  build-all-native-libs.sh  build-android-native-libs.ps1  build-android-native-libs.sh  build-ios-native-libs.sh  build-nas-package.sh  build-native-lib.sh  build-video-processing-lib.sh  check-dependencies.ps1  check-timeline.sh  cleanup-old-branches.ps1  create-platform-branches.ps1  create-platform-branches.sh  install-build-dependencies.ps1  install-ffmpeg.ps1  install-ffmpeg.sh  install-vscode-extensions.ps1  install-vscode-extensions.sh  manage-documentation.sh  monitor-ffmpeg-performance.ps1  monitor-ffmpeg-performance.sh  publish-local.sh  quick-install.ps1  setup-git-hooks.sh
shared/: build.gradle.kts
(+556 files in other folders)
